Bug fix: image overlay was overflowing

--- a/src/stylesheets/sass/_image-gallery.scss
+++ b/src/stylesheets/sass/_image-gallery.scss
@@ -1,4 +1,5 @@
 // section in main with a class of image-gallery
+
 .image-gallery {
     display: flex;
     flex-wrap: wrap;
@@ -14,7 +15,6 @@
         padding: 0;
     }
     width: 100%;
-
     /*
       each figure is wrapped in a container that takes up a predetermined space
       Mobile - 1 photo per row, ~tablet 2 per row, large devices 3 per row
@@ -23,6 +23,7 @@
         display: flex;
         height: auto;
         justify-content: center;
+        position: relative;
         width: 100%;
         @media (min-width: 649px) {
             width: 50%;
@@ -30,8 +31,48 @@
         @media (min-width: 1200px) {
             width: 33.3333%;
         }
-    }
 
+        .background {
+            // color for hover effect
+            background-color: $accent-opaque;
+            opacity: 0;
+            height: 100%;
+            left: 0;
+            position: absolute;
+            top: 0;
+            transition: all 0.5s;
+            width: 100%;
+            z-index: 999;
+
+            &:hover {
+                opacity: 1;
+
+                // show the span element
+                span {
+                    opacity: 1;
+                }
+            }
+
+            span {
+                color: $white;
+                font: {
+                    family: 'Open sans', sans-serif;
+                    size: 24px;
+                    weight: 700;
+                }
+                left: 50%;
+                opacity: 0;
+                position: absolute;
+                text-shadow: 1px 1px 2px $text-dark;
+                text-transform: uppercase;
+                top: 50%;
+                transform: translate(-50%, -50%);
+                transition: 0.3s ease-in-out;
+                // https://stackoverflow.com/a/25776315
+                // credit for helping me understand how to center an absolutely positioned element
+            }
+        }
+    }
 
     figure {
         height: auto;
@@ -40,18 +81,6 @@
         position: relative;
         max-width: 650px;
         width: 100%;
-        // color for hover effect
-        background: $accent;
-
-        // show the background color
-        &:hover > img {
-            opacity: 0.5;
-        }
-
-        // show the span element
-        &:hover > span {
-            opacity: 1;
-        }
 
         img {
             height: 100%;
@@ -59,24 +88,5 @@
             opacity: 1;
             transition: 0.3s ease-in-out;
         }
-    }
-
-    span {
-      color: $white;
-      font: {
-        family: 'Open sans', sans-serif;
-        size: 24px;
-        weight: 700;
-      }
-        left: 50%;
-        opacity: 0;
-        position: absolute;
-        text-transform: uppercase;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        transition: 0.3s ease-in-out;
-
-        // https://stackoverflow.com/a/25776315
-        // credit for helping me understand how to center an absolutely positioned element
     }
 }
