--- a/src/stylesheets/sass/_variables.scss
+++ b/src/stylesheets/sass/_variables.scss
@@ -8,6 +8,7 @@ $text-dark: #333;
 
 //main colors
 $accent: #d32f2f;
+$accent-opaque: rgba(211, 47, 47, 0.5);
 $accent-bright: #9a0007;
 
 //grays
